test/classes/delete-free/owned/owned-implicit-copy-tuple-error.good
owned-implicit-copy-tuple-error.chpl:14: error: argument 1 for tuple construction is const but tuple construction takes ownership
owned-implicit-copy-tuple-error.chpl:14: error: argument 2 for tuple construction is const but tuple construction takes ownership
